[gd_scene load_steps=16 format=3 uid="uid://2vrar5oimq7w"]

[ext_resource type="Script" path="res://scripts/main/Camera2D.gd" id="1_3ni0c"]
[ext_resource type="Shader" path="res://shaders/background.gdshader" id="1_18s1q"]
[ext_resource type="Script" path="res://scripts/main/main.gd" id="1_s8dlj"]
[ext_resource type="PackedScene" uid="uid://cnnkq0ck7enoe" path="res://scenes/main/V1Ship.tscn" id="1_t7232"]
[ext_resource type="PackedScene" uid="uid://ht86nyl406e0" path="res://scenes/main/ammo.tscn" id="2_sn1av"]
[ext_resource type="Texture2D" uid="uid://b6ygtpy03uwyn" path="res://Assets/blank.png" id="3_tbksx"]
[ext_resource type="Script" path="res://scripts/main/background.gd" id="4_ipepv"]
[ext_resource type="Material" uid="uid://dvk7c1gwgooq2" path="res://materials/blur.tres" id="5_7b0vs"]
[ext_resource type="Script" path="res://classes/wave_class.gd" id="8_ugngb"]
[ext_resource type="PackedScene" uid="uid://cxlv8frg7bb5j" path="res://scenes/main_menu/settings.tscn" id="10_kv6x2"]
[ext_resource type="Script" path="res://scripts/main/HealthDispaly.gd" id="10_xetaq"]
[ext_resource type="PackedScene" uid="uid://bm17tx1od4ayg" path="res://scenes/main/repair.tscn" id="11_yoaq2"]
[ext_resource type="PackedScene" uid="uid://bb7wqftw37ooe" path="res://scenes/main/healthBar.tscn" id="12_15pch"]
[ext_resource type="Script" path="res://scripts/main/ammo.gd" id="13_uycqb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n3pl3"]
shader = ExtResource("1_18s1q")
shader_parameter/position = Vector2(4.065, 0)
shader_parameter/scale = 500.0
shader_parameter/cutoff = 0.997
shader_parameter/gamma = 0.14

[node name="Main" type="Node2D"]
process_mode = 3
script = ExtResource("1_s8dlj")

[node name="Ammo" parent="." instance=ExtResource("2_sn1av")]
z_index = 2
position = Vector2(144, 0)

[node name="Repair" parent="." instance=ExtResource("11_yoaq2")]
position = Vector2(552, -160)

[node name="player" parent="." instance=ExtResource("1_t7232")]
unique_name_in_owner = true
process_mode = 1

[node name="Wave" type="Node2D" parent="."]
process_mode = 1
script = ExtResource("8_ugngb")
time = 4.0
min_interval = 3.0
extra_spawn_chance = 0.05

[node name="Wave2" type="Node2D" parent="."]
process_mode = 1
script = ExtResource("8_ugngb")
time = 5.0
interval = 30.0
path = "scenes/main/V2Enemy.tscn"
min_interval = 12.0
interval_delta = 0.5

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 3
process_callback = 0
script = ExtResource("1_3ni0c")

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
process_mode = 3
visible = false
z_index = 2
material = ExtResource("5_7b0vs")
offset_left = -339.0
offset_top = -190.0
offset_right = 340.0
offset_bottom = 190.0
color = Color(0, 0, 0, 0)

[node name="background" type="Sprite2D" parent="Camera2D"]
process_mode = 3
z_index = -10
material = SubResource("ShaderMaterial_n3pl3")
scale = Vector2(1000, 1000)
texture = ExtResource("3_tbksx")
script = ExtResource("4_ipepv")

[node name="Pause Menu" type="Node2D" parent="Camera2D"]
process_mode = 3
visible = false
z_index = 3

[node name="resume" type="Button" parent="Camera2D/Pause Menu"]
process_mode = 3
texture_filter = 1
offset_left = -208.0
offset_top = -136.0
offset_right = -64.0
offset_bottom = -72.0
keep_pressed_outside = true
text = "Resume"

[node name="exit" type="Button" parent="Camera2D/Pause Menu"]
process_mode = 3
z_index = 3
texture_filter = 1
offset_left = -208.0
offset_top = 72.0
offset_right = -64.0
offset_bottom = 136.0
text = "Exit Game"

[node name="main_menu" type="Button" parent="Camera2D/Pause Menu"]
process_mode = 3
z_index = 3
texture_filter = 1
offset_left = -208.0
offset_top = 8.0
offset_right = -64.0
offset_bottom = 64.0
keep_pressed_outside = true
text = "Main Menu"

[node name="settings" type="Button" parent="Camera2D/Pause Menu"]
process_mode = 3
z_index = 3
texture_filter = 1
offset_left = -208.0
offset_top = -64.0
offset_right = -64.0
toggle_mode = true
text = "Settings"

[node name="Settings" parent="Camera2D/Pause Menu" instance=ExtResource("10_kv6x2")]
visible = false
offset_left = -56.0
offset_top = -136.0
offset_right = 264.0
offset_bottom = 56.0

[node name="Death Screen" type="Node2D" parent="Camera2D"]
process_mode = 3
visible = false

[node name="restart" type="Button" parent="Camera2D/Death Screen"]
process_mode = 3
z_index = 3
texture_filter = 1
offset_left = -72.0
offset_top = -72.0
offset_right = 72.0
offset_bottom = -8.0
text = "Restart"

[node name="main_menu" type="Button" parent="Camera2D/Death Screen"]
process_mode = 3
z_index = 3
texture_filter = 1
offset_left = -72.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 72.0
keep_pressed_outside = true
text = "Main Menu"

[node name="ItemList" type="ItemList" parent="Camera2D"]
z_index = 3
texture_filter = 1
offset_left = 128.0
offset_top = -190.0
offset_right = 340.0
offset_bottom = -101.0
allow_search = false
auto_height = true
text_overrun_behavior = 0
item_count = 3
max_columns = 2
same_column_width = true
item_0/text = "Main Body: 75%"
item_0/selectable = false
item_1/text = "Left Engine: 50%"
item_1/selectable = false
item_2/text = "Right Engine: 100%"
item_2/selectable = false
script = ExtResource("10_xetaq")

[node name="timer" type="Label" parent="Camera2D"]
z_index = 3
texture_filter = 1
offset_left = -128.0
offset_top = -190.0
offset_right = 128.0
offset_bottom = -128.0
text = "0.0s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bar" parent="Camera2D" instance=ExtResource("12_15pch")]
position = Vector2(0, 176)
script = ExtResource("13_uycqb")

[connection signal="button_down" from="Camera2D/Pause Menu/resume" to="." method="_on_resume_button_down"]
[connection signal="button_down" from="Camera2D/Pause Menu/exit" to="." method="_on_exit_button_down"]
[connection signal="button_down" from="Camera2D/Pause Menu/main_menu" to="." method="_on_main_menu_button_down"]
[connection signal="toggled" from="Camera2D/Pause Menu/settings" to="Camera2D/Pause Menu/Settings" method="_on_settings_toggled"]
[connection signal="button_down" from="Camera2D/Death Screen/restart" to="." method="_on_restart"]
[connection signal="button_down" from="Camera2D/Death Screen/main_menu" to="." method="_on_main_menu_button_down"]
